Fixed order cards, Update Meal and Request unicode and admin, use scrollbar, Link user view in report page

--- a/src/backend/bigspoon/bigspoon/assets/css/main.css
+++ b/src/backend/bigspoon/bigspoon/assets/css/main.css
@@ -304,6 +304,7 @@ nav ul li a:hover, nav ul li a:focus, nav ul li a:active {
     margin: 5px;
     padding-bottom: 20px;
     width: 270px;
+    height: 400px;
     border-radius: 5px;
     background: #fff;
     -webkit-box-shadow: 0px 2px 2px rgba(50, 50, 50, 0.1);
@@ -362,6 +363,7 @@ nav ul li a:hover, nav ul li a:focus, nav ul li a:active {
 }
 
 p.note {
+    height: 50px;
     font-size:14px;
     border-top: 1px dashed rgba(0, 0, 0, 0.2);
     border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
@@ -371,6 +373,7 @@ p.note {
     color: #333;
     min-height:50px;
     word-wrap: break-word;
+    overflow:scroll;
 }
 
 .item .icon{
@@ -394,6 +397,8 @@ p.note {
 .order {
     margin-top: 2px;
     padding: 0px;
+    height: 115px;
+    overflow:scroll;
 }
 
 .order li {
@@ -722,7 +727,7 @@ p.success {
 .user {
     display:block;
     height: 50px;
-    margin-bottom: -3px;
+    /*margin-bottom: -3px;*/
 }
 
 .user h4 {
